examples/macro-tests/tests/fail/05_provider_unknown_template.stderr
error: Unknown provider attribute 'bogus'. Supported: env
 --> tests/fail/05_provider_unknown_template.rs:6:18
  |
6 | #[provider(8080, bogus = "bad")]
  |                  ^^^^^

error[E0425]: cannot find type `BadAttr` in this scope
 --> tests/fail/05_provider_unknown_template.rs:5:10
  |
5 | #[derive(Clone)]
  |          ^^^^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `BadAttr` in this scope
 --> tests/fail/05_provider_unknown_template.rs:5:10
  |
5 | #[derive(Clone)]
  |          ^^^^^ not found in this scope
